--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,16 @@
-# Archivos compilados
-*.o
-compiler
-program
+# Ignorar PDFs
+*.pdf
 
-# Archivos generados
-output.s
-func3.s
+# Ignorar archivos LaTeX
+*.tex
 *.aux
 *.log
-*.toc
 *.out
+*.toc
+*.synctex.gz
 
-# macOS
-.DS_Store
+# Ignorar scripts shell
+*.sh
 
-# Directorios de build
-build/
-
-# IDE
-.vscode/
-.idea/
-
-# Python
-__pycache__/
-*.pyc
-
-# Archivos temporales
-*.tmp
-*.swp
+# Ignorar carpeta semanas
+semanas/
